Edge Split Modifier don't work anymore when a Array Modifier is after the Edge Split Modifier added #41630

Closed
opened 2014-08-29 12:44:46 +02:00 by David Schrott · 18 comments

System Information
Operating system and graphics card
Windows 7 64bit
AMD Phentom X6 1100T
AMD Radeon HD 6950 2gb

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
2.71.6 6891f1c
Worked: (optional)
2.71 release

Short description of error
When you smooth a Mesh and then add a Edge Split Modifier and then afterwards a Array Modifier. Then the Mesh looks like if there were no Edge Split Modifier added.
Exact steps for others to reproduce the error
Open the file

Based on a (as simple as possible) attached .blend file with minimum amount of steps

**System Information** Operating system and graphics card Windows 7 64bit AMD Phentom X6 1100T AMD Radeon HD 6950 2gb **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) 2.71.6 6891f1c Worked: (optional) 2.71 release **Short description of error** When you smooth a Mesh and then add a Edge Split Modifier and then afterwards a Array Modifier. Then the Mesh looks like if there were no Edge Split Modifier added. **Exact steps for others to reproduce the error** Open the file Based on a (as simple as possible) attached .blend file with minimum amount of steps
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @thelasthope

Added subscriber: @thelasthope
Author

Bug.jpg

![Bug.jpg](https://archive.blender.org/developer/F107274/Bug.jpg)
Author
[bug.blend](https://archive.blender.org/developer/F107276/bug.blend)
Bastien Montagne self-assigned this 2014-08-29 12:51:51 +02:00

Strange… Things are OK is Split Edge is applied…

Note you can use new 'Auto Smooth' feature instead of Split Edge modifier, things a re OK in this case.

Strange… Things are OK is Split Edge is applied… Note you can use new 'Auto Smooth' feature instead of Split Edge modifier, things a re OK in this case.

This issue was referenced by cba2e0afa7

This issue was referenced by cba2e0afa7525f93d1834cc5de6ca659547fdc5a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit cba2e0afa7.

Closed by commit cba2e0afa7.
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author

Sorry that I reopen this report, but i found another bug in the Edge Split or Array Modifier and its releated to this bug report. So the problematic is not fully fixed.

But please tell me when you want that i make a seperated report.

Problem:
When you smooth a Mesh and then add a Edge Split Modifier and then afterwards a Array Modifier. Then the Mesh looks like if there were no Edge Split Modifier added. (Like before, but now the problematic appears when have Merge in the Array Modifier activated.

Sorry that I reopen this report, but i found another bug in the Edge Split or Array Modifier and its releated to this bug report. So the problematic is not fully fixed. But please tell me when you want that i make a seperated report. Problem: When you smooth a Mesh and then add a Edge Split Modifier and then afterwards a Array Modifier. Then the Mesh looks like if there were no Edge Split Modifier added. (Like before, but now the problematic appears when have Merge in the Array Modifier activated.
Author

bug.jpg

![bug.jpg](https://archive.blender.org/developer/F107756/bug.jpg)
Author
[new_bug.blend](https://archive.blender.org/developer/F107758/new_bug.blend)

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

No bug here, quite obviously if you enable merge the edge that were split by the previous modifier are merged again…

No bug here, quite obviously if you enable merge the edge that were split by the previous modifier are merged again…

And please always rather open new report, reopening should remain the exception and be done by dev team.

And please always rather open new report, reopening should remain the exception and be done by dev team.
Author

That isn't a bug?
I thought it was a bug because it had worked in the release of 2.71 (and i think in also in previous versions also) and now it don't work in the newest build.

When this isn't a bug, you should tell in the Release Notes that in 2.72 there is compatibility break for older files with this special case.

That isn't a bug? I thought it was a bug because it had worked in the release of 2.71 (and i think in also in previous versions also) and now it don't work in the newest build. When this isn't a bug, you should tell in the Release Notes that in 2.72 there is compatibility break for older files with this special case.

More precisely, in 2.71 and before, there was only a partial merge, because only vertices at the 'boundaries' between duplicates were checked. Imho, this gave even worse (less predictable) results, see e.g. mod_edgesplit_array_merge.blend.

So yes, think doing a full merge is better than partial one, makes things much more reliable and predictable.

In any case, modifiers like edgesplit (but also subsurf, etc.) should always be put late in the stack, makes more sense.

More precisely, in 2.71 and before, there was only a partial merge, because only vertices at the 'boundaries' between duplicates were checked. Imho, this gave even worse (less predictable) results, see e.g. [mod_edgesplit_array_merge.blend](https://archive.blender.org/developer/F107847/mod_edgesplit_array_merge.blend). So yes, think doing a full merge is better than partial one, makes things much more reliable and predictable. In any case, modifiers like edgesplit (but also subsurf, etc.) should always be put late in the stack, makes more sense.
Author

okay thanks for this detailed answer

okay thanks for this detailed answer
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41630
No description provided.