Fix T41630: Edge Split Modifier don't work anymore when a Array Modifier is after the Edge Split Modifier added.

Dirty normals flag has to be passed to new dm...